--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<div id="btn">Only plain text without any additional tags inside the button</div>
+	<button id="btn" type="submit">Button</button>
 
 
 
