--- a/main.html
+++ b/main.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-	<button id="btn" type="submit">Submit</button>
+	<!-- <button id="btn" type="submit">Submit</button> -->
+	<button type="button" id="btn">Submit</button>
 
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
