--- a/main.html
+++ b/main.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-	<button id="btn" type="submit">Only plain text without any additional tags inside the button</button>
+	<button id="btn" type="submit">submit</button>
+	<content>Only plain text without any additional tags inside the button</content>
 	<!-- <button type="button" id="btn">Submit</button> -->
 
 	<!-- the entire body must be written by student -->
