--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<button id="btn" type="submit">submit</button>
-	<content>Only plain text without any additional tags inside the button</content>
+	<!-- <content>Only plain text without any additional tags inside the button</content> -->
 	<!-- <button type="button" id="btn">Submit</button> -->
 
 	<!-- the entire body must be written by student -->
